# lule

./: Cargo.toml  README.md
src/: cli.rs  fun.rs  gen.rs  main.rs  scheme.rs  show.rs
src/cli/: colors.rs  daemon.rs  mod.rs  test.rs
src/fun/: text.rs
src/show/: canvas.rs
src/var/: args.rs  defs.rs  mod.rs  temp.rs
