[package]
name = "lule"
version = "0.1.0"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "a command line to set 255 colors on tty's and other places that use ANSI colors"
edition = "2018"

[dependencies]
file = "1.1.2"
dirs = "3.0.2"
atty = "0.2.14"
clap = "2.34.0"
rand = "0.8.5"
colored = "2.0.4"
pastel = "0.9.0"
image = "0.23.14"
rayon = "1.7"
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
getset = "0.1.2"
viuer = "0.3.1"
crossterm = "0.19.0"
anyhow = "1.0.75"
daemonize = "0.5"
notify = "4.0.17"
nix = "0.19.1"
tokio = { version= "1.32.0", features = ["full"] }
futures = "0.3.28"
templar = "0.5"
fork = "0.1.22"
nom = "5"
